# UI-CW3

./: CMakeLists.txt  data_analysis.ipynb
src/: main.cpp
src/backend/: dataset.cpp  dataset.hpp  water_sample.cpp  water_sample.hpp
src/frontend/: environmental_litter_page.cpp  environmental_litter_page.hpp  file_select_widget.cpp  file_select_widget.hpp  fluorinated_compounds_page.cpp  fluorinated_compounds_page.hpp  pollutant_analysis_page.cpp  pollutant_analysis_page.h  pollutant_overview_page.cpp  pollutant_overview_page.hpp  window.cpp  window.hpp
